[gd_scene load_steps=6 format=3 uid="uid://cwrl1q31ff0xu"]

[ext_resource type="Script" path="res://Entities/Tower.gd" id="1_4doac"]

[sub_resource type="Gradient" id="Gradient_1j5wr"]
colors = PackedColorArray(1, 1, 1, 1, 1, 1, 1, 1)

[sub_resource type="GradientTexture1D" id="GradientTexture1D_xqc07"]
gradient = SubResource("Gradient_1j5wr")
width = 1

[sub_resource type="CircleShape2D" id="CircleShape2D_kasgm"]
radius = 500.0

[sub_resource type="SceneReplicationConfig" id="SceneReplicationConfig_1vil5"]
properties/0/path = NodePath(".:position")
properties/0/spawn = true
properties/0/sync = true
properties/0/watch = false

[node name="tower" type="Node2D"]
script = ExtResource("1_4doac")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(100, 100)
texture = SubResource("GradientTexture1D_xqc07")

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("CircleShape2D_kasgm")

[node name="Timer" type="Timer" parent="."]

[node name="MultiplayerSynchronizer" type="MultiplayerSynchronizer" parent="."]
replication_config = SubResource("SceneReplicationConfig_1vil5")

[connection signal="area_entered" from="Area2D" to="." method="_on_area_2d_area_entered"]
[connection signal="area_exited" from="Area2D" to="." method="_on_area_2d_area_exited"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
